--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/logo.png
-    - lib/lang/en.json
-    - lib/lang/nep.json
+    - assets/lang/en-US.json
+    - assets/lang/ne-NP.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
